--- a/react-tools/src/Pomodoro.css
+++ b/react-tools/src/Pomodoro.css
@@ -5,9 +5,43 @@
     justify-content: center;
 }
 
+#timer{
+    font-size: 150px;
+    margin-top:10px;
+    margin-bottom: 50px;
+}
+
+
+
+.button_bar{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+.btn1{
+    height:50px;
+    margin-left: 10px;
+    margin-right:10px;
+    font-size: 30px;
+    border: 0px;
+    margin-top: 10px;
+}
+
+.start_btn{
+    height:50px;
+    font-size:30px;
+
+}
+
 #middle_container{
-    height: 200px;
-    width: 300px;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    height: 400px;
+    width: 600px;
     border: 2px solid red;
     fill: darkred;
 }
